estou fazendo um desafio

--- a/Exercicios/ex033/fundo006.html
+++ b/Exercicios/ex033/fundo006.html
@@ -11,13 +11,16 @@
             background-color: white;
             margin: auto;
             padding: 20px;
+            max-width: 700px;
         }
         body{
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             background-size: cover;
-            
         }
     </style>
 </head>
@@ -25,6 +28,11 @@
     <main>
         <h1> QUALQUER COISA</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum voluptate, mollitia facere fugiat aliquam tenetur repellendus doloremque, porro asperiores quod libero possimus pariatur eaque similique reprehenderit! Vero, laborum perspiciatis!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto, perferendis maxime cumque ipsam dolorem eveniet recusandae minima consectetur quidem velit exercitationem, aperiam nesciunt incidunt odio quis modi? Officia, iste dicta?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam libero, temporibus qui sint obcaecati consequatur magni esse quos deleniti. Cupiditate, amet veniam quaerat quae commodi possimus ex modi sint </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatem nulla blanditiis quos. Ipsam ullam provident quos fugit sequi, veritatis consectetur ratione aliquam nisi dolorem eos? Ex dolorum veniam dolore.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum voluptate, mollitia facere fugiat aliquam tenetur repellendus doloremque, porro asperiores quod libero possimus pariatur eaque similique reprehenderit! Vero, laborum perspiciatis!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto, perferendis maxime cumque ipsam dolorem eveniet recusandae minima consectetur quidem velit exercitationem, aperiam nesciunt incidunt odio quis modi? Officia, iste dicta?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam libero, temporibus qui sint obcaecati consequatur magni esse quos deleniti. Cupiditate, amet veniam quaerat quae commodi possimus ex modi sint </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit voluptatem nulla blanditiis quos. Ipsam ullam provident quos fugit sequi, veritatis consectetur ratione aliquam nisi dolorem eos? Ex dolorum veniam dolore.</p>
     </main>
 
 
