--- a/Exercicios/ex038/mq05/index.html
+++ b/Exercicios/ex038/mq05/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="estilos/config.css" media="screen">
     <title>Document</title>
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <i id="burguer" class="material-icons">menu</i>
-        <menu>
+        <i id="burguer" class="material-icons" onclick='clickMenu()' >menu</i>
+        <menu id="item">
             <ul>
                 <li><a href="#"> Opção 1</a></li>
                 <li><a href="#"> Opção 2</a></li>
@@ -26,12 +27,37 @@
     <main>
         <article>
             <h1>Site responsivo</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam voluptatem exercitationem natus delectus? Possimus, aut voluptatibus! Alias blanditiis, dolorum qui vero corrupti aperiam quaerat facere voluptatibus est ex veritatis consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore rerum animi, sit modi sequi optio quaerat molestias pariatur voluptas vel, rem voluptatum magni. Explicabo delectus pariatur perferendis, sit aut omnis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius natus labore repudiandae quibusdam, perferendis alias facilis officiis incidunt possimus facere eveniet. Tempore optio numquam eos quas tenetur hic consectetur recusandae.</p> 
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam voluptatem exercitationem natus delectus? Possimus, aut voluptatibus! Alias blanditiis, dolorum qui vero corrupti aperiam quaerat facere voluptatibus est ex veritatis consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore rerum animi, sit modi sequi optio quaerat molestias pariatur voluptas vel, rem volptatum magni. Explicabo delectus pariatur perferendis, sit aut omnis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius natus labore repudiandae quibusdam, perferendis alias facilis officiis incidunt possimus facere eveniet. Tempore optio numquam eos quas tenetur hic consectetur recusandae.</p> 
 
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod ducimus commodi ipsum explicabo necessitatibus tenetur laborum voluptatum iste fugiat incidunt. Deleniti unde nulla amet animi vel. Cumque ipsam ut fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsa unde fuga, dolore commodi perferendis ut rerum officiis. Cupiditate neque quam quo deleniti sint, consequuntur quas laborum quaerat perspiciatis minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea facere commodi asperiores saepe fuga iure numquam iste! Molestias sapiente adipisci aperiam! Asperiores ratione excepturi aspernatur tempora quidem quis natus perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur numquam commodi fuga voluptates labore possimus tempora quae eius. Quod quas blanditiis deleniti, delectus maiores eligendi nesciunt et eius omnis quasi!</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam debitis officiis culpa recusandae! Cupiditate veniam rerum, ex, voluptas pariatur, sit necessitatibus quod praesentium repudiandae est alias facilis delectus quia eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, mollitia. Aspernatur sit amet eos veniam, iste nemo voluptatibus alias recusandae eaque. Vel voluptatum et numquam nesciunt eos atque laudantium voluptatem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci veritatis pariatur dolor ut corporis, est accusantium quaerat aut repellat eaque harum voluptatibus omnis iusto dolorem. Nemo, facere. Minima, doloribus vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae earum ad eligendi quia blanditiis ratione ducimus nihil consectetur! Quia quisquam nesciunt quis totam eos eaque excepturi. Dicta quae nesciunt nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, enim non fugit alias incidunt recusandae assumenda, nam explicabo, maxime laudantium commodi. Quidem aliquid adipisci, veritatis cupiditate iusto architecto aliquam eos.</p>
         </article>
     </main>
+
+  
+
+
+    <script>
+
+        function mudouTamanho {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } 
+            
+            else{
+                itens.style.display = 'none'
+            }
+           }
+
+
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = "none"
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
